--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@types/jest": "24.0.9",
+    "@types/lodash": "^4.14.123",
     "@types/node": "11.10.4",
     "@types/react": "16.8.6",
     "@types/react-codemirror": "^1.0.2",
     "@types/react-dom": "16.8.2",
     "codemirror": "^5.44.0",
+    "immer": "^2.1.3",
     "js-beautify": "^1.9.0",
+    "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
     "react": "^16.8.3",
     "react-codemirror2": "^5.1.0",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
     "typescript": "3.3.3333",
     "uuid": "^3.3.2"
   },
